Bug 107254 - [BAT] igt@drv_selftest@mock_hugepages - dmesg-fail - Failed assertion: err == 0
Summary: [BAT] igt@drv_selftest@mock_hugepages - dmesg-fail - Failed assertion: err == 0
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-17 07:59 UTC by Martin Peres
Modified: 2018-08-04 09:22 UTC (History)
1 user (show)

See Also:
i915 platform: G33
i915 features: GEM/Other


Attachments

Description Martin Peres 2018-07-17 07:59:51 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4473/fi-bwr-2160/igt@drv_selftest@mock_hugepages.html

(drv_selftest:6930) igt_kmod-WARNING: Performing mock selftests with st_random_seed=0x8233c53b st_timeout=1000
(drv_selftest:6930) igt_kmod-WARNING: igt_mock_ppgtt_64K failed with error -12
(drv_selftest:6930) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:519:
(drv_selftest:6930) igt_kmod-CRITICAL: Failed assertion: err == 0
(drv_selftest:6930) igt_kmod-CRITICAL: kselftest "i915 igt__26__mock_hugepages=1 mock_selftests=-1 disable_display=1" failed: Cannot allocate memory [12]
Subtest mock_hugepages failed.
Comment 1 Chris Wilson 2018-07-17 09:30:18 UTC
If my guess is correct that this is self-inflicted (as opposed to external fragmentation), this should be prevented by:

commit d778847208c016f66a44d4c40baa74ca3bf724fd (HEAD -> drm-intel-next-queued, drm-intel/for-linux-next, drm-intel/drm-intel-next-queued)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jul 17 09:23:34 2018 +0100

    drm/i915/selftests: Free the backing store between iterations
    
    In the huge pages tests, we may have lots of objects being trapped on
    the freelist as we hold the struct_mutex allowing the free worker no
    opportunity to recover the backing store. We also have stricter
    requirements and the desire for large contiguous pages, further
    increasing the allocation pressure. To reduce the chance of running out
    of memory, we could either drop the mutex and flush the free worker, or
    we could release the backing store directly. We do the latter in this
    patch for simplicity.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=107254
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Matthew Auld <matthew.william.auld@gmail.com>
    Reviewed-by: Matthew Auld <matthew.william.auld@gmail.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180717082334.18774-1-chris@chris-wilson.co.uk
Comment 2 Dhinakaran Pandiyan 2018-07-20 23:57:51 UTC
This failure hasn't been since CI_DRM_4473.
Martin, time to close this?
Comment 3 Francesco Balestrieri 2018-08-04 09:22:10 UTC
Closing as this is not seen anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.